Перенастроена адаптация блока фильтров в модуле объявлений о продаже щенков

--- a/src/index.html
+++ b/src/index.html
@@ -646,7 +646,7 @@
                 <div class="filters">
                     <form action="">
                         <div class="form-row">
-                            <div class="form-group col-lg-2 col-md-6">
+                            <div class="form-group col-xl-2 col-md-4 col-sm-6">
                                 <div class="select">
                                     <select id="breed" class="form-control">
                                         <option selected>Порода</option>
@@ -656,7 +656,7 @@
                                     <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
                                 </div>
                             </div>
-                            <div class="form-group col-lg-2 col-md-6">
+                            <div class="form-group col-xl-2 col-md-4 col-sm-6">
                                 <div class="select">
                                     <select id="sex" class="form-control">
                                         <option selected>Пол</option>
@@ -666,7 +666,7 @@
                                     <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
                                 </div>
                             </div>
-                            <div class="form-group col-lg-2 col-md-6">
+                            <div class="form-group col-xl-2 col-md-4 col-sm-6">
                                 <div class="select">
                                     <select id="birthday" class="form-control">
                                         <option selected>Дата рождения</option>
@@ -675,7 +675,7 @@
                                     <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
                                 </div>
                             </div>
-                            <div class="form-group col-lg-2 col-md-6">
+                            <div class="form-group col-xl-2 col-md-4 col-sm-6">
                                 <div class="select">
                                     <select id="map" class="form-control">
                                         <option selected>Местоположение</option>
@@ -684,7 +684,7 @@
                                     <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
                                 </div>
                             </div>
-                            <div class="form-group col-lg-2 col-md-6">
+                            <div class="form-group col-xl-2 col-md-4 col-sm-6">
                                 <div class="select">
                                     <select id="price" class="form-control">
                                         <option selected>Цена</option>
@@ -694,7 +694,7 @@
                                 </div>
 
                             </div>
-                            <div class="form-group col-lg-2 col-md-6">
+                            <div class="form-group col-xl-2 col-md-4 col-sm-6">
                                 <button type="submit">
                                     <i class="fa fa-filter" aria-hidden="true"></i>
                                     <span>Выбрать</span>
