Настроена адаптация фильтра модуля розыск собаки

--- a/src/index.html
+++ b/src/index.html
@@ -444,7 +444,6 @@
                         <a href=""><span>Как сюда попасть?</span></a>
                     </div>
                 </div>
-
                 <div class="block_cards">
                     <div class="row no-gutters">
                         <div class="col-12 col-sm-6 col-lg-3">
@@ -903,21 +902,72 @@
                             </div>
                         </div>
                     </div>
-                    <div class="mod_links">
-                        <div class="add_post">
-                            <a href="">
-                                <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                                <span>Добавить объявление</span>
-                            </a>
-                        </div>
-                        <div class="all_post">
-                            <a href="">
-                                <i class="fa fa-eye" aria-hidden="true"></i>
-                                <span>Смотреть все объявления</span>
-                            </a>
+                </div>
+                <div class="filters">
+                    <form action="">
+                        <div class="form-row">
+                            <div class="form-group col-xl-2 col-lg-6 col-md-6 col-sm-6">
+                                <div class="select">
+                                    <select id="map" class="form-control">
+                                        <option selected>Место пропажи</option>
+                                        <option>Карта</option>
+                                    </select>
+                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
+                                </div>
+                            </div>
+                            <div class="form-group col-xl-2 col-lg-6 col-md-6 col-sm-6">
+                                <div class="select">
+                                    <select id="birthday" class="form-control">
+                                        <option selected>Дата пропажи</option>
+                                        <option>Календарь</option>
+                                    </select>
+                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
+                                </div>
+                            </div>
+                            <div class="form-group col-xl-2 col-lg-6 col-md-6 col-sm-6">
+                                <div class="select">
+                                    <select id="breed" class="form-control">
+                                        <option selected>Порода</option>
+                                        <option>Австралийская овчарка</option>
+                                        <option>Сибирский хаски</option>
+                                    </select>
+                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
+                                </div>
+                            </div>
+                            <div class="form-group col-xl-2 col-lg-6 col-md-6 col-sm-6">
+                                <div class="select">
+                                    <select id="sex" class="form-control">
+                                        <option selected>Пол</option>
+                                        <option>Мужской</option>
+                                        <option>Женский</option>
+                                    </select>
+                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
+                                </div>
+                            </div>
+                            <div class="form-group col-xl-2 col-lg-6 col-md-6 col-sm-6">
+                                <button type="submit">
+                                    <i class="fa fa-filter" aria-hidden="true"></i>
+                                    <span>Выбрать</span>
+                                </button>
+                            </div>
                         </div>
 
+                    </form>
+                </div>
+                <div class="mod_links">
+                    <div class="add_post">
+                        <a href="">
+                            <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                            <span>Добавить объявление</span>
+                        </a>
                     </div>
+                    <div class="all_post">
+                        <a href="">
+                            <i class="fa fa-eye" aria-hidden="true"></i>
+                            <span>Смотреть все объявления</span>
+                        </a>
+                    </div>
+
                 </div>
             </div><!--end /#mod_search_dog-->
         </div><!--end /.wrapper_content-->
