Добавлены дополнительные поля (порода, пол) при выводе объявлений в модулях о розыске собаки и розыске хозяина

--- a/src/index.html
+++ b/src/index.html
@@ -767,10 +767,19 @@
                                             </a>
                                         </div>
                                     </div>
-
-
                                 </div>
                                 <div class="info">
+                                    <div class="breed">
+                                        <i class="fa fa-tag" aria-hidden="true"></i>
+                                        <span class="label">Порода:</span>
+                                        <span>Мини терьер</span>
+                                    </div>
+                                    <div class="sex">
+                                        <i class="fa fa-transgender" aria-hidden="true"></i>
+                                        <span class="label">Пол:</span>
+                                        <span>Мужской</span>
+
+                                    </div>
                                     <div class="event">
                                         <i class="fa fa-calendar-o" aria-hidden="true"></i>
                                         <span>Дата пропажи:</span>
@@ -832,6 +841,17 @@
 
                                 </div>
                                 <div class="info">
+                                    <div class="breed">
+                                        <i class="fa fa-tag" aria-hidden="true"></i>
+                                        <span class="label">Порода:</span>
+                                        <span>Золотистый ретривер</span>
+                                    </div>
+                                    <div class="sex">
+                                        <i class="fa fa-transgender" aria-hidden="true"></i>
+                                        <span class="label">Пол:</span>
+                                        <span>Мужской</span>
+
+                                    </div>
                                     <div class="event">
                                         <i class="fa fa-calendar-o" aria-hidden="true"></i>
                                         <span>Дата пропажи:</span>
@@ -886,6 +906,17 @@
 
                                 </div>
                                 <div class="info">
+                                    <div class="breed">
+                                        <i class="fa fa-tag" aria-hidden="true"></i>
+                                        <span class="label">Порода:</span>
+                                        <span>Золотистый ретривер</span>
+                                    </div>
+                                    <div class="sex">
+                                        <i class="fa fa-transgender" aria-hidden="true"></i>
+                                        <span class="label">Пол:</span>
+                                        <span>Мужской</span>
+
+                                    </div>
                                     <div class="event">
                                         <i class="fa fa-calendar-o" aria-hidden="true"></i>
                                         <span>Дата пропажи:</span>
@@ -1020,11 +1051,17 @@
 
                                 </div>
                                 <div class="info">
-                                    <!--<div class="event">-->
-                                        <!--<i class="fa fa-calendar-o" aria-hidden="true"></i>-->
-                                        <!--<span>Дата пропажи:</span>-->
-                                        <!--<span class="day">23 апреля 2018</span>-->
-                                    <!--</div>-->
+                                    <div class="breed">
+                                        <i class="fa fa-tag" aria-hidden="true"></i>
+                                        <span class="label">Порода:</span>
+                                        <span>Золотистый ретривер</span>
+                                    </div>
+                                    <div class="sex">
+                                        <i class="fa fa-transgender" aria-hidden="true"></i>
+                                        <span class="label">Пол:</span>
+                                        <span>Мужской</span>
+
+                                    </div>
                                     <div class="map">
                                         <i class="fa fa-map-marker" aria-hidden="true"></i>
                                         <span>Место нахождения:</span>
@@ -1081,11 +1118,17 @@
 
                                 </div>
                                 <div class="info">
-                                    <!--<div class="event">-->
-                                        <!--<i class="fa fa-calendar-o" aria-hidden="true"></i>-->
-                                        <!--<span>Дата пропажи:</span>-->
-                                        <!--<span class="day">23 апреля 2018</span>-->
-                                    <!--</div>-->
+                                    <div class="breed">
+                                        <i class="fa fa-tag" aria-hidden="true"></i>
+                                        <span class="label">Порода:</span>
+                                        <span>Золотистый ретривер</span>
+                                    </div>
+                                    <div class="sex">
+                                        <i class="fa fa-transgender" aria-hidden="true"></i>
+                                        <span class="label">Пол:</span>
+                                        <span>Мужской</span>
+
+                                    </div>
                                     <div class="map">
                                         <i class="fa fa-map-marker" aria-hidden="true"></i>
                                         <span>Место нахождения:</span>
@@ -1135,11 +1178,17 @@
 
                                 </div>
                                 <div class="info">
-                                    <!--<div class="event">-->
-                                        <!--<i class="fa fa-calendar-o" aria-hidden="true"></i>-->
-                                        <!--<span>Дата пропажи:</span>-->
-                                        <!--<span class="day">23 апреля 2018</span>-->
-                                    <!--</div>-->
+                                    <div class="breed">
+                                        <i class="fa fa-tag" aria-hidden="true"></i>
+                                        <span class="label">Порода:</span>
+                                        <span>Золотистый ретривер</span>
+                                    </div>
+                                    <div class="sex">
+                                        <i class="fa fa-transgender" aria-hidden="true"></i>
+                                        <span class="label">Пол:</span>
+                                        <span>Мужской</span>
+
+                                    </div>
                                     <div class="map">
                                         <i class="fa fa-map-marker" aria-hidden="true"></i>
                                         <span>Место нахождения:</span>
