Создана первоначальная структура модуля Выставки собак

--- a/src/index.html
+++ b/src/index.html
@@ -1257,6 +1257,288 @@
 
                 </div>
             </div><!--end /#mod_search_owner-->
+            <div id="mod_show_dogs" class="show_dogs">
+                <div class="mod_title">
+                    <h2>Продаются щенки</h2>
+                    <div class="link_help">
+                        <a href=""><span>Как сюда попасть?</span></a>
+                    </div>
+                </div>
+                <div class="block_cards">
+                    <div class="row no-gutters">
+                        <div class="col-12 col-sm-6 col-lg-3">
+                            <div class="wrap_card">
+                                <div class="meta_info">
+                                    <div class="top">
+                                        <i class="fa fa-star fa-lg" aria-hidden="true"></i>
+                                        <span>Top</span></div>
+                                    <div class="price">$250</div>
+                                </div>
+                                <div class="flip_card">
+                                    <div class="front_card">
+                                        <img src="images/content/mod_puppies/img_card005.jpg" alt="">
+                                        <div class="breed">Сибирский хаски</div>
+                                        <div class="fields">
+                                            <div class="sex"><i class="fa fa-mars" aria-hidden="true"></i>
+                                                <span>Мальчик</span></div>
+                                            <div class="birthday">
+                                                <i class="fa fa-calendar" aria-hidden="true"></i>
+                                                <span>19 ноября 2018</span>
+                                            </div>
+                                            <div class="adress">
+                                                <i class="fa fa-map-marker" aria-hidden="true"></i>
+                                                <span>Беларусь, г.Минск, ул.Руссиянова 12</span>
+                                            </div>
+                                        </div>
+                                    </div><!-- end/.front_card-->
+                                    <div class="back_card">
+                                        <div class="text">
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium
+                                                asperiores beatae blanditiis corporis culpa in ipsam ipsum labore
+                                                mollitia nesciunt nihil nisi, nulla perspiciatis qui ratione
+                                                repudiandae, unde, vel velit.
+                                            </p>
+                                            <p>Aliquid harum iusto minus nihil possimus. Accusantium aliquid at
+                                                cupiditate deleniti, eligendi, fuga impedit inventore laborum magni
+                                                natus omnis pariatur porro praesentium quas sit, soluta tempora velit
+                                                veritatis voluptate voluptates.
+                                            </p>
+                                        </div>
+                                        <div class="link_more">
+                                            <a href="">
+                                                <span>Подробнее</span>
+                                                <i class="fa fa-angle-right" aria-hidden="true"></i>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-sm-6 col-lg-3">
+                            <div class="wrap_card">
+                                <div class="meta_info">
+                                    <div class="top">
+                                        <i class="fa fa-star fa-lg" aria-hidden="true"></i>
+                                        <span>Top</span></div>
+                                    <div class="price">$2250</div>
+                                </div>
+                                <div class="flip_card">
+                                    <div class="front_card">
+                                        <img src="images/content/mod_puppies/img_card006.jpg" alt="">
+                                        <div class="breed">Австралийский шелковистый
+                                            терьер
+                                        </div>
+                                        <div class="fields">
+                                            <div class="sex"><i class="fa fa-mars" aria-hidden="true"></i>
+                                                <span>Мальчик</span></div>
+                                            <div class="birthday">
+                                                <i class="fa fa-calendar" aria-hidden="true"></i>
+                                                <span>19 ноября 2018</span>
+                                            </div>
+                                            <div class="adress">
+                                                <i class="fa fa-map-marker" aria-hidden="true"></i>
+                                                <span>Украина, г.Киев, ул.Грушевского 129</span>
+                                            </div>
+                                        </div>
+                                    </div><!-- end/.front_card-->
+                                    <div class="back_card">
+                                        <div class="text">
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium
+                                                asperiores beatae blanditiis corporis culpa in ipsam ipsum labore
+                                                mollitia nesciunt nihil nisi, nulla perspiciatis qui ratione
+                                                repudiandae, unde, vel velit.
+                                            </p>
+                                            <p>Aliquid harum iusto minus nihil possimus. Accusantium aliquid at
+                                                cupiditate deleniti, eligendi, fuga impedit inventore laborum magni
+                                                natus omnis pariatur porro praesentium quas sit, soluta tempora velit
+                                                veritatis voluptate voluptates.
+                                            </p>
+                                        </div>
+                                        <div class="link_more">
+                                            <a href="">
+                                                <span>Подробнее</span>
+                                                <i class="fa fa-angle-right" aria-hidden="true"></i>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-sm-6 col-lg-3">
+                            <div class="wrap_card">
+                                <div class="meta_info">
+                                    <div class="top">
+                                        <i class="fa fa-star fa-lg" aria-hidden="true"></i>
+                                        <span>Top</span></div>
+                                    <div class="price">$34250</div>
+                                </div>
+                                <div class="flip_card">
+                                    <div class="front_card">
+                                        <img src="images/content/mod_puppies/img_card003.jpg" alt="">
+                                        <div class="breed">Американский бульдог</div>
+                                        <div class="fields">
+                                            <div class="sex"><i class="fa fa-mars" aria-hidden="true"></i>
+                                                <span>Мальчик</span></div>
+                                            <div class="birthday">
+                                                <i class="fa fa-calendar" aria-hidden="true"></i>
+                                                <span>19 ноября 2018</span>
+                                            </div>
+                                            <div class="adress">
+                                                <i class="fa fa-map-marker" aria-hidden="true"></i>
+                                                <span>Россия, г.Воронеж, ул.Октябрьская 124А</span>
+                                            </div>
+                                        </div>
+                                    </div><!-- end/.front_card-->
+                                    <div class="back_card">
+                                        <div class="text">
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium
+                                                asperiores beatae blanditiis corporis culpa in ipsam ipsum labore
+                                                mollitia nesciunt nihil nisi, nulla perspiciatis qui ratione
+                                                repudiandae, unde, vel velit.
+                                            </p>
+                                            <p>Aliquid harum iusto minus nihil possimus. Accusantium aliquid at
+                                                cupiditate deleniti, eligendi, fuga impedit inventore laborum magni
+                                                natus omnis pariatur porro praesentium quas sit, soluta tempora velit
+                                                veritatis voluptate voluptates.
+                                            </p>
+                                        </div>
+                                        <div class="link_more">
+                                            <a href="">
+                                                <span>Подробнее</span>
+                                                <i class="fa fa-angle-right" aria-hidden="true"></i>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-sm-6 col-lg-3">
+                            <div class="wrap_card">
+                                <div class="meta_info">
+                                    <div class="top">
+                                        <i class="fa fa-star fa-lg" aria-hidden="true"></i>
+                                        <span>Top</span></div>
+                                    <div class="price">$250</div>
+                                </div>
+                                <div class="flip_card">
+                                    <div class="front_card">
+                                        <img src="images/content/mod_puppies/img_card004.jpg" alt="">
+                                        <div class="breed">Английский коккер-спаниель</div>
+                                        <div class="fields">
+                                            <div class="sex"><i class="fa fa-mars" aria-hidden="true"></i>
+                                                <span>Мальчик</span></div>
+                                            <div class="birthday">
+                                                <i class="fa fa-calendar" aria-hidden="true"></i>
+                                                <span>19 ноября 2018</span>
+                                            </div>
+                                            <div class="adress">
+                                                <i class="fa fa-map-marker" aria-hidden="true"></i>
+                                                <span>Казахстан, г.Астана, ул.Кизибека Нургалиева 12</span>
+                                            </div>
+                                        </div>
+                                    </div><!-- end/.front_card-->
+                                    <div class="back_card">
+                                        <div class="text">
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium
+                                                asperiores beatae blanditiis corporis culpa in ipsam ipsum labore
+                                                mollitia nesciunt nihil nisi, nulla perspiciatis qui ratione
+                                                repudiandae, unde, vel velit.
+                                            </p>
+                                            <p>Aliquid harum iusto minus nihil possimus. Accusantium aliquid at
+                                                cupiditate deleniti, eligendi, fuga impedit inventore laborum magni
+                                                natus omnis pariatur porro praesentium quas sit, soluta tempora velit
+                                                veritatis voluptate voluptates.
+                                            </p>
+                                        </div>
+                                        <div class="link_more">
+                                            <a href="">
+                                                <span>Подробнее</span>
+                                                <i class="fa fa-angle-right" aria-hidden="true"></i>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="filters">
+                    <form action="">
+                        <div class="form-row">
+                            <div class="form-group col-xl-2 col-md-4 col-sm-6">
+                                <div class="select">
+                                    <select id="breed" class="form-control">
+                                        <option selected>Порода</option>
+                                        <option>Австралийская овчарка</option>
+                                        <option>Сибирский хаски</option>
+                                    </select>
+                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
+                                </div>
+                            </div>
+                            <div class="form-group col-xl-2 col-md-4 col-sm-6">
+                                <div class="select">
+                                    <select id="sex" class="form-control">
+                                        <option selected>Пол</option>
+                                        <option>Мужской</option>
+                                        <option>Женский</option>
+                                    </select>
+                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
+                                </div>
+                            </div>
+                            <div class="form-group col-xl-2 col-md-4 col-sm-6">
+                                <div class="select">
+                                    <select id="birthday" class="form-control">
+                                        <option selected>Дата рождения</option>
+                                        <option>Календарь</option>
+                                    </select>
+                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
+                                </div>
+                            </div>
+                            <div class="form-group col-xl-2 col-md-4 col-sm-6">
+                                <div class="select">
+                                    <select id="map" class="form-control">
+                                        <option selected>Местоположение</option>
+                                        <option>Карта</option>
+                                    </select>
+                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
+                                </div>
+                            </div>
+                            <div class="form-group col-xl-2 col-md-4 col-sm-6">
+                                <div class="select">
+                                    <select id="price" class="form-control">
+                                        <option selected>Цена</option>
+                                        <option>500 руб.</option>
+                                    </select>
+                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
+                                </div>
+
+                            </div>
+                            <div class="form-group col-xl-2 col-md-4 col-sm-6">
+                                <button type="submit">
+                                    <i class="fa fa-filter" aria-hidden="true"></i>
+                                    <span>Выбрать</span>
+                                </button>
+                            </div>
+                        </div>
+
+                    </form>
+                </div>
+                <div class="mod_links">
+                    <div class="add_post">
+                        <a href="">
+                            <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                            <span>Добавить объявление</span>
+                        </a>
+                    </div>
+                    <div class="all_post">
+                        <a href="">
+                            <i class="fa fa-eye" aria-hidden="true"></i>
+                            <span>Смотреть все объявления</span>
+                        </a>
+                    </div>
+
+                </div>
+            </div><!--end /#mod_show_dogs-->
         </div><!--end /.wrapper_content-->
     </div>
 </section>
