--- a/src/index.html
+++ b/src/index.html
@@ -1259,7 +1259,7 @@
             </div><!--end /#mod_search_owner-->
             <div id="mod_show_dogs" class="show_dogs">
                 <div class="mod_title">
-                    <h2>Продаются щенки</h2>
+                    <h2>Выставки собак</h2>
                     <div class="link_help">
                         <a href=""><span>Как сюда попасть?</span></a>
                     </div>
@@ -1268,22 +1268,25 @@
                     <div class="row no-gutters">
                         <div class="col-12 col-sm-6 col-lg-3">
                             <div class="wrap_card">
-                                <div class="meta_info">
-                                    <div class="top">
-                                        <i class="fa fa-star fa-lg" aria-hidden="true"></i>
-                                        <span>Top</span></div>
-                                    <div class="price">$250</div>
-                                </div>
                                 <div class="flip_card">
                                     <div class="front_card">
-                                        <img src="images/content/mod_puppies/img_card005.jpg" alt="">
-                                        <div class="breed">Сибирский хаски</div>
+                                        <h3>Республиканская выставка породистых собак «Лидер - 2018»</h3>
+                                        <img src="images/content/mod_show_dogs/img_show_dogs001.jpg" alt="">
+
                                         <div class="fields">
-                                            <div class="sex"><i class="fa fa-mars" aria-hidden="true"></i>
-                                                <span>Мальчик</span></div>
-                                            <div class="birthday">
-                                                <i class="fa fa-calendar" aria-hidden="true"></i>
-                                                <span>19 ноября 2018</span>
+                                            <div class="period">
+                                                <div class="label">
+                                                    <i class="fa fa-calendar" aria-hidden="true"></i>
+                                                    <span>Период проведения:</span></div>
+                                                <span class="start_date">19 ноября 2018</span>
+                                                <span class="end_date">19 ноября 2018</span>
+                                            </div>
+                                            <div class="operation_mode">
+                                                <div class="label">
+                                                    <i class="fa fa-clock-o" aria-hidden="true"></i>
+                                                    <span>Режим работы:</span>
+                                                </div>
+                                                <span class="time">10.00 - 18.00</span>
                                             </div>
                                             <div class="adress">
                                                 <i class="fa fa-map-marker" aria-hidden="true"></i>
@@ -1316,12 +1319,6 @@
                         </div>
                         <div class="col-12 col-sm-6 col-lg-3">
                             <div class="wrap_card">
-                                <div class="meta_info">
-                                    <div class="top">
-                                        <i class="fa fa-star fa-lg" aria-hidden="true"></i>
-                                        <span>Top</span></div>
-                                    <div class="price">$2250</div>
-                                </div>
                                 <div class="flip_card">
                                     <div class="front_card">
                                         <img src="images/content/mod_puppies/img_card006.jpg" alt="">
@@ -1366,12 +1363,6 @@
                         </div>
                         <div class="col-12 col-sm-6 col-lg-3">
                             <div class="wrap_card">
-                                <div class="meta_info">
-                                    <div class="top">
-                                        <i class="fa fa-star fa-lg" aria-hidden="true"></i>
-                                        <span>Top</span></div>
-                                    <div class="price">$34250</div>
-                                </div>
                                 <div class="flip_card">
                                     <div class="front_card">
                                         <img src="images/content/mod_puppies/img_card003.jpg" alt="">
@@ -1414,12 +1405,6 @@
                         </div>
                         <div class="col-12 col-sm-6 col-lg-3">
                             <div class="wrap_card">
-                                <div class="meta_info">
-                                    <div class="top">
-                                        <i class="fa fa-star fa-lg" aria-hidden="true"></i>
-                                        <span>Top</span></div>
-                                    <div class="price">$250</div>
-                                </div>
                                 <div class="flip_card">
                                     <div class="front_card">
                                         <img src="images/content/mod_puppies/img_card004.jpg" alt="">
