--- a/src/index.html
+++ b/src/index.html
@@ -1289,7 +1289,10 @@
                                                 <span class="time">10.00 - 18.00</span>
                                             </div>
                                             <div class="adress">
-                                                <i class="fa fa-map-marker" aria-hidden="true"></i>
+                                                <div class="label">
+                                                    <i class="fa fa-map-marker" aria-hidden="true"></i>
+                                                    <span>Место положение:</span>
+                                                </div>
                                                 <span>Беларусь, г.Минск, ул.Руссиянова 12</span>
                                             </div>
                                         </div>
